*Empty MediaWiki Message*

--- a/Modern_Talking:an_pajod.mw
+++ b/Modern_Talking:an_pajod.mw
@@ -8,7 +8,7 @@ Se om t√§uz' '''[[Modern Talking]]-kollektivan pajoiden kirjutez''' pordoiden m√
 # '''''[[The Night Is Yours ‚Äî The Night Is Mine]]''''' (The 1st Album)
 # '''''[[Do You Wanna]]''''' (The 1st Album)
 # '''''[[Lucky Guy]]''''' (The 1st Album)
-# '''''One In a Million''''' (The 1st Album)
+# '''''[[One In a Million]]''''' (The 1st Album)
 # '''''Bells of Paris''''' (The 1st Album)
 # '''''[[Cheri, Cheri Lady]]''''' ([[Let's Talk About Love]])
 # '''''With a Little Love''''' (Let's Talk About Love)
@@ -112,7 +112,7 @@ Se om t√§uz' '''[[Modern Talking]]-kollektivan pajoiden kirjutez''' pordoiden m√
 # '''''America''''' (America)
 # '''''For a Life Time''''' (America)
 # '''''From Coast to Coast''''' (America)
-# '''''There's Something in the Air''''' (America)
+# '''''[[There's Something in the Air]]''''' (America)
 # '''''[[I Need You Now]]''''' (America)
 # '''''[[New York City Girl]]''''' (America)
 # '''''Send Me a Letter from Heaven''''' (America)
@@ -132,7 +132,7 @@ Se om t√§uz' '''[[Modern Talking]]-kollektivan pajoiden kirjutez''' pordoiden m√
 # '''''If I...''''' (Victory)
 # '''''Who Will Love You Like I Do''''' (Victory)
 # '''''[[TV Makes the Superstar]]''''' ([[Universe]])
-# '''''I'm No Rockefeller''''' (Universe)
+# '''''[[I'm No Rockefeller]]''''' (Universe)
 # '''''Mystery''''' (Universe)
 # '''''Everybody Needs Somebody''''' (Universe)
 # '''''Heart of an Angel''''' (Universe)
