--- a/Päiväine.mw
+++ b/Päiväine.mw
@@ -2,9 +2,10 @@
 [[Fail:The Sun by the Atmospheric Imaging Assembly of NASA's Solar Dynamics Observatory - 20100801.jpg|250px|thumb|NASA:n Päiväižen fotokuva]]
 [[Fail:Sun symbol.svg|30px|left|Päiväižen astronomine znam]]
 '''Päiväine''' ([[Latinan kel'|latinan kelel]]: ''Sol'') om [[Päiväižen sistem]]an üksjaine [[tähtaz]], kudambas ümbri punose necen sisteman toižed objektad: planetad i niiden sputnikad, karlikplanetad i niiden kaimnikad, asteroidad, meteoroitad, händtähthad (kometad) da kosmospölüd. Päiväižen vedaduz om 99,866 % Päiväižen sisteman vadadust vai 1,9891×10<sup>30</sup> kilogrammad. Päivaižen sädegoičend abutab elole [[Ma]]l (fotonad oma tarbhaižed [[Fotosintez|fotosintezha]] täht). Päiväižen südäimuz: [[vezinik]] (~73 % vedadusespäi i ~92 % mülündmäraspäi), [[gelii]] (~25 % vedadusespäi i ~7 % mülündmäraspäi) da toižed elementad penembanke koncentracijanke ([[raud]], [[nikel']], kislorod vai [[hapanik]], [[azot]], [[ola]], [[rik]], [[magnii]], [[hil'nik]], [[neon]], [[kal'cii]], [[hrom]]). Spektraližen klassifikacijan mödhe päiväine om G2V:n tipan tähtaz («Pakuine karlik»).
-Temperatur Päiväižen pindal om 6000 K (kel'vinad). 
 
-Päiväižen da [[Maidote]]n galaktikan keskusen keskes om 26 000 lämoivot; Päiväine punose ümbri Maidontes. Nügüd' Päiväine om meiden galaktikan Orionan hijamas.
+Lämuz Päiväižen pindal om 6000 K (kel'vinad). 
+
+Päiväižen da [[Maidte]]n galaktikan keskusen keskes om 26 000 lämoivot; Päiväine punose ümbri Maidtes. Nügüd' Päiväine om meiden galaktikan Orionan hijamas.
 
 == Irdkosketused ==
 * [http://www.astronet.ru/db/msg/eid/FK86/sun Päiväine] (venäkelel)
