*Empty MediaWiki Message*

--- a/Maidte.mw
+++ b/Maidte.mw
@@ -1,7 +1,7 @@
 {{1000}}
-[[Fail:Milky Way galaxy.jpg|thumb|right|250px|Maidote]]
-'''Maidote''' (vai '''Maidomatk''') om [[spiraline galaktik]]. Sigä oma [[Päiväižen sistem]]an ([[Orionan hijam]]as) da nägubiden tähtasiden enambuz südäimes.
+[[Fail:Milky Way galaxy.jpg|thumb|right|250px|Maidte]]
+'''Maidte''' om [[spiraline galaktik]]. Sigä oma [[Päiväižen sistem]]an ([[Orionan hijam]]as) da nägubiden tähtasiden enambuz südäimes.
 {{stub}}
 
-[[Kategorii:Maidote|*]]
+[[Kategorii:Maidte|*]]
 [[Kategorii:Galaktikad]]
