--- a/Maidte.mw
+++ b/Maidte.mw
@@ -4,7 +4,7 @@
 
 Maidten diametr om läz 100,000 [[vauktuzvoz'|vauktuzvot]]. Galaktikas om 200—400 billionad tähthad, kaikiš vanhamb kaikišpäi, [[HE 1523-0901]], om olmas 13—14 milliardad vot.
 
-Nece om üks'jäine galatik (tetabidešpäi nügüdläižen aigan), kus [[elo]] om.
+Nece om üks'jäine galatik (tetabidešpäi nügüdläižen aigan), kudambas [[elo]] om.
 {{stub}}
 
 [[Kategorii:Maidte|*]]
