--- a/Kurganan_agj.mw
+++ b/Kurganan_agj.mw
@@ -122,7 +122,7 @@ Agj kogoneb 24 municipaližiš rajonoišpäi da 2 lidnanümbrikoišpäi.
 |-
 | 19
 | Častoozerjen rajon
-| Častoozerje
+| Častoozerje-külä
 |-
 | 20
 | Šadrinskan rajon
