*Empty MediaWiki Message*

--- a/Džakart.mw
+++ b/Džakart.mw
@@ -24,7 +24,7 @@ Eläjiden religiozine mülükund: 85,5 %&nbsp;oma [[islam]]an polenpidajad, 5,2 
 * {{GRC|#}} [[Afinad]], [[Grekanma]]<ref name="Perayaan HUT Jakarta"/>
 * {{THA|#}} [[Bankok]], [[Tailand]]<ref name="Perayaan HUT Jakarta"/>
 * {{DEU|#}} [[Berlin]], [[Germanii]]<ref name="Perayaan HUT Jakarta"/><ref>[http://www.jakarta.go.id/web/news/2011/06/Walikota-Berlin-Bangga-Dengan-Kota-Jakarta Walikota Berlin Bangga Dengan Kota Jakarta]</ref> vl. 1993 sulakun 22. päivälpäi<ref>[http://www.berlin.de/rbmskzl/staedteverbindungen/jakarta.de.html Partnerstadt Jakarta]</ref>
-* {{MAR|#}} [[Kasablanc]], [[Marok]]<ref name="Perayaan HUT Jakarta"/> vl. 1991 semendkun 27. päivälpäi
+* {{MAR|#}} [[Kasablank]], [[Marok]]<ref name="Perayaan HUT Jakarta"/> vl. 1991 semendkun 27. päivälpäi
 * {{SAU|#}} [[Džidd]], [[Saudoiden Arabii]]<ref name="Perayaan HUT Jakarta"/> vl. 1979 keväz'kun 10. päivälpäi
 * {{VIE|#}} [[Hanoi]], [[Vjetnam]]<ref>[http://arsip.gatra.com/artikel.php?pil=23&id=49399 Gubernur DKI dan Walikota Hanoi Tandatangani MOU Sister City]</ref>
 * {{PAK|#}} [[Islamabad]], [[Pakistan]] vl. 1984 redukun 25. päivälpäi<ref>[http://www.app.com.pk/en_/index.php?option=com_content&task=view&id=94783 Islamabad-Jakarta Sister City Agreement to be reactivated]</ref>
@@ -47,3 +47,5 @@ Eläjiden religiozine mülükund: 85,5 %&nbsp;oma [[islam]]an polenpidajad, 5,2 
 
 [[Kategorii:Indonezijan lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
+
+[[ru:Джакарта]]
