*Empty MediaWiki Message*

--- a/Džakart.mw
+++ b/Džakart.mw
@@ -20,7 +20,8 @@
 
 Eläjiden religiozine mülükund: 85,5 %&nbsp;oma [[islam]]an polenpidajad, 5,2 %&nbsp;— [[protestantad]], 4,8 %&nbsp;— [[katolikad]], 3,5 %&nbsp;— [[buddistad]], 1 %&nbsp;— [[induistad]].
 
-== Sebruzlidnad ==
+== Rahvahidenkeskeižed sidod ==
+=== Sebruzlidnad ===
 * {{GRC|#}} [[Afinad]], [[Grekanma]]<ref name="Perayaan HUT Jakarta"/>
 * {{THA|#}} [[Bankok]], [[Tailand]]<ref name="Perayaan HUT Jakarta"/>
 * {{DEU|#}} [[Berlin]], [[Germanii]]<ref name="Perayaan HUT Jakarta"/><ref>[http://www.jakarta.go.id/web/news/2011/06/Walikota-Berlin-Bangga-Dengan-Kota-Jakarta Walikota Berlin Bangga Dengan Kota Jakarta]</ref> vl. 1993 sulakun 22. päivälpäi<ref>[http://www.berlin.de/rbmskzl/staedteverbindungen/jakarta.de.html Partnerstadt Jakarta]</ref>
