--- a/Džakart.mw
+++ b/Džakart.mw
@@ -32,7 +32,7 @@ Eläjiden religiozine mülükund: 85,5 %&nbsp;oma [[islam]]an polenpidajad, 5,2 
 * {{USA|#}} [[Los Andželes]], [[AÜV]]<ref name="Perayaan HUT Jakarta">[http://berita.liputan6.com/read/80743/perayaan_hut_jakarta_berharga_rp_35_miliar Perayaan HUT Jakarta Berharga RP 3,5 Miliar]</ref> vl. 1990 tal'vkun 28. päivälpäi<ref>[http://sistercities.lacity.org/html/19.htm Sister Cities of Los Angeles – Jakarta, Indonesia]</ref>
 * {{FRA|#}} [[Pariž]], [[Francii]]<ref name="Perayaan HUT Jakarta"/> partnör-lidn vl. 1995 sügüz'kun 8. päivälpäi<ref>[http://www.paris.fr/politiques/paris-a-l-international/paris-ville-monde/les-pactes-d-amitie-et-de-cooperation/rub_6587_stand_16468_port_14974 Les pactes d'amitié et de coopération]</ref>
 * {{CHN|#}} [[Pekin]], [[Kitai]]<ref name="Perayaan HUT Jakarta"/> vl. 1992 elokun 4. päivälpäi<ref>[http://www.ebeijing.gov.cn/Sister_Cities/Sister_City/ Beijing’s Sister Cities]</ref>
-* {{PRK|#}} [[Pjongjan]], [[Pohjoižkorei]]<ref>[http://www.beritajakarta.com/V_Ind/berita_print.asp?nNewsId=23034 Kerja Sama Sister City Jakarta-Pyongyang Ditandatangani. — 2007-02-28.]</ref>
+* {{PRK|#}} [[Phen'jan]], [[Pohjoižkorei]]<ref>[http://www.beritajakarta.com/V_Ind/berita_print.asp?nNewsId=23034 Kerja Sama Sister City Jakarta-Pyongyang Ditandatangani. — 2007-02-28.]</ref>
 * {{NLD|#}} [[Rotterdam]], [[Alamad]]<ref name="Perayaan HUT Jakarta"/><ref>[http://www.beritajakarta.com/2008/en/newsview.aspx?idwil=0&id=18044 Jakarta-Rotterdam Cooperate on Flood Handling]</ref> vl. 1986 elokun 1. päivälpäi
 * {{KOR|#}} [[Seul]], [[Suvikorei]]<ref name="Perayaan HUT Jakarta"/><ref>[http://www.koreatimes.co.kr/www/news/special/2011/11/211_7098.html Seoul-Jakarta Cooperation Getting Stronger]</ref> vl. 1984 heinkun 25. päivälpäi
 * {{TUR|#}} [[Stambul]], [[Turcii]]<ref>[http://www.greatistanbul.com/sister_cities.htm Sister Cities of Istanbul]</ref>
