*Empty MediaWiki Message*

--- a/Džakart.mw
+++ b/Džakart.mw
@@ -16,7 +16,7 @@
  | Aigvö = [[UTC]]+7
 }}
 [[Fail:Central Jakarta.JPG|pisi|hura|250px|Lidnan keskuz]]
-'''Džakart''' ([[indonezijan kel'|ind]]. Jakarta, [[javan kel'|jav]]. Jakarta; edel 1527. vot — '''Sunda Kelapa''', edel 1619. vot — '''Džajakart''', edel 1942. vot — '''Batavii''') om eriline pälidnan ümbrik ([[indonezijan kel'|ind]].''Daerah Khusus Ibu Kota Jakarta''), Indonezijan pälidn da sen surembaine lidn, kudamb sijadase [[Jav-sar'|Jav-saren]] lodehližel randištol, kus [[Čilivung (jogi)|Čilivung-jogi]] (Kali Besar-jogi) lankteb Javanmerhe.
+'''Džakart''' ([[indonezijan kel'|ind]]. Jakarta, [[javan kel'|jav]]. Jakarta; edel 1527. vot — '''Sunda Kelapa''', edel 1619. vot — '''Džajakart''', edel 1942. vot — '''Batavii''') om eriline pälidnalaine ümbrik ([[indonezijan kel'|ind]].''Daerah Khusus Ibu Kota Jakarta''), Indonezijan pälidn da sen surembaine lidn, kudamb sijadase [[Jav-sar'|Jav-saren]] lodehližel randištol, kus [[Čilivung (jogi)|Čilivung-jogi]] (Kali Besar-jogi) lankteb Javanmerhe.
 
 Eläjiden religiozine mülükund: 85,5 %&nbsp;oma [[islam]]an polenpidajad, 5,2 %&nbsp;— [[protestantad]], 4,8 %&nbsp;— [[katolikad]], 3,5 %&nbsp;— [[buddistad]], 1 %&nbsp;— [[induistad]].
 
