--- a/Džakart.mw
+++ b/Džakart.mw
@@ -48,5 +48,6 @@ Eläjiden religiozine mülükund: 85,5 %&nbsp;oma [[islam]]an polenpidajad, 5,2 
 
 [[Kategorii:Indonezijan lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
-
-[[ru:Джакарта]]
+[[Kategorii:Džakart|*]]
+[[Kategorii:Pälidnad]]
+[[Kategorii:Indonezii]]
