*Empty MediaWiki Message*

--- a/Good_Guys_Only_Win_in_Movies.mw
+++ b/Good_Guys_Only_Win_in_Movies.mw
@@ -1,6 +1,6 @@
 '''«Good Guys Only Win in Movies»''' (''Hüväd prihad vägestadas vaiše fil'moiš'') om [[C. C. Catch]]:an pajo «[[Like a Hurricane]]»-al'bomaspäi. Pajon tekst om [[anglijan kel'|anglijan kelel]].
 
-Ühtinnimine singl om pästtud [[1989]]-žes vodes, päliči kaks' voziš «Like a Hurricane»-al'boman pästandan jäl'ghe. Sen momentannoks pajo linni populäritoi muzikaližiš čartoiš jo.
+Ühtinnimine singl om pästtud [[1989]]-žes vodes, päliči kaks' voziš «Like a Hurricane»-al'boman pästandan jäl'ghe. Sen momentannoks pajo linni populäritomaks muzikaližiš čartoiš jo.
 {{stub}}
 {{C. C. Catch}}
 
