--- a/One_In_a_Million.mw
+++ b/One_In_a_Million.mw
@@ -1,6 +1,6 @@
 '''«One In a Million»''' (''Üks' millionaspäi'') om pajo [[Modern Talking]]:an «[[The 1st Album]]»-al'bomas. Pajon tekst om [[anglijan kel'|anglijan kelel]].
 
-Pajo mülüi [[air play]]-čarthe [[Livan]]as, i oli 67-žes sijas sijaližen hitparadas.
+Pajo mülüi [[air play]]-čartha [[Livan]]as, i oli 67-žes sijas sijaližen hitparadas.
 {{stub}}
 {{Modern Talking}}
 
