*Empty MediaWiki Message*

--- a/I'm_No_Rockefeller.mw
+++ b/I'm_No_Rockefeller.mw
@@ -1,6 +1,6 @@
 '''«I'm No Rockefeller»''' (''Minä en ole [[Rokfeller (kanz)|Rokfeller]]'') om pajo [[Modern Talking]]:an «[[Universe]]»-al'bomas. Pajon tekst om [[anglijan kel'|anglijan kelel]].
 
-Pajo mülüi [[air play]]-čarthe [[Venäma]]s, i oli 1-žes sijas sijaližen hitparadas.
+Pajo mülüi [[air play]]-čartha [[Venäma]]s, i oli 1-žes sijas sijaližen hitparadas.
 {{stub}}
 {{Modern Talking}}
 
