--- a/Maidte.mw
+++ b/Maidte.mw
@@ -2,9 +2,9 @@
 [[Fail:Milky Way galaxy.jpg|thumb|right|250px|Maidte]]
 '''Maidte''' om [[spiraline galaktik]]. Sigä oma [[Päiväižen sistem]]an ([[Orionan hijam]]as) da nägubiden tähtasiden enambuz südäimes.
 
-Maidten diametr om läz 100,000 [[vauktuzvoz'|vauktuzvot]]. Galaktikas om 200—400 billionad tähthad, kaikiš vanhamb kaikišpäi, [[HE 1523-0901]], om olmas 13—14 milliardad vot.
+Maidten diametr om läz 100,000 [[vauktuzvoz'|vauktuzvot]]. Galaktikas om 200—400 billionad tähthad, kaikiš vanhemb kaikišpäi, [[HE 1523-0901]], om olmas 13—14 milliardad vot.
 
-Nece om üks'jäine galatik (tetabidešpäi nügüdläižen aigan), kudambas [[elo]] om.
+Nece om üks'jäine galatik (tetabižišpäi nügüdläižen aigan), kudambas [[elo]] om.
 {{stub}}
 
 [[Kategorii:Maidte|*]]
