--- a/Mars.mw
+++ b/Mars.mw
@@ -1,7 +1,7 @@
 {{1000}}
 [[Fail:Mars Hubble.jpg|pisi|250px|Mars]]
 [[Fail:Mars symbol.svg|hura|30px|]]
-'''Mars''' om nellänz' planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as, [[Ma (planet)|Maižen]] gruppan planet. Marsan [[perigelii]] om 2,49232·10<sup>8</sup> km, [[afelii]] om 2,06655·10<sup>8</sup> km. Planet punose ümbri Päiväižes da tegeb kogonaine pörund 687 maižiš päiviš.
+'''Mars''' om nellänz' planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as, [[Ma (planet)|Maižen]] gruppan planet. Marsan [[perigelii]] om 2,49232·10<sup>8</sup> km, [[afelii]] om 2,06655·10<sup>8</sup> km. Planet punose ümbri Päiväižes da tegeb kogonaižen punondan 687 maižiš päiviš.
 
 {{stub}}
 
