*Empty MediaWiki Message*

--- a/Go.mw
+++ b/Go.mw
@@ -1,10 +1,8 @@
 {{1000}}
 [[Fail:Go_board.jpg|thumb|right|275px|Veroline puine golaud — [[goban]]]]
-'''Go''' ([[Japonijan kel'|jap.]] 碁, [[Kitajan kel'|kit.]] 围棋 '''veici''', [[Korejan kel'|kor.]] 바둑 '''paduk''') om veroline strategine [[laudanvänd]], kudamb om sätud amuizes [[Kitai|Kitajas]] 2000 da 200 voziden e.m.e. keskes.
+'''Go''' ([[Japonijan kel'|jap.]] 碁, [[Kitajan kel'|kit.]] 围棋 '''veici''', [[Korejan kel'|kor.]] 바둑 '''paduk''') om veroline strategine [[laudanvänd]], kudamb om sädud amuizes [[Kitai|Kitajas]] 2000 da 200 voziden e.m.e. keskes.
 
 {{stub}}
 
 [[Kategorii:Go|*]]
 [[Kategorii:Laudanvändad]]
-
-[[ru:Го]]
