Чётное кол-во слогов - tud, нечётное - dud

--- a/Šahmatad.mw
+++ b/Šahmatad.mw
@@ -1,5 +1,5 @@
 [[Fail:Chess-king.JPG|thumb|right|250px|Šahmatad]]
-'''Šahmatad''' oma logine [[laudanvänd]]. Sätud amuižes [[Indii|Indijas]].
+'''Šahmatad''' oma logine [[laudanvänd]]. Sädud amuižes [[Indii|Indijas]].
 
 Vätas kaks' vändajad. Om kuz [[šahmatfigurad|figurad]], sijadud [[šahmatlaud|laudal]] 64 stajidenke. Figuroil da stajil om kaks' mujud — [[vauged muju|vauged]] da [[must muju|must]]. Tobjimalaz vänd vedab aigaks.
 
