*Empty MediaWiki Message*

--- a/Blue_System.mw
+++ b/Blue_System.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = [[Bolen Diter|Diter Bolen]], [[Köler Rol'f|Rol'f Köler]], [[Šol'c Mihael'|Mihael' Šol'c]]
  | Sait = http://rema.myweb.ge/web/index.html
 }}
-'''«Blue System»''' oli [[Modern Talking]]:an muzikaline saidprojekt, sätud jäl'ges sen čihodamišt. 
+'''«Blue System»''' oli [[Modern Talking]]:an muzikaline saidprojekt, sädud jäl'ges sen čihodamišt. 
 
 Mülükund oli ''[[Bolen Diter|Diter Bolen]]'', ''[[Köler Rol'f|Rol'f Köler]]'' da ''[[Šol'c Mihael'|Mihael' Šol'c]]''.
 
