*Empty MediaWiki Message*

--- a/Shooting_Star.mw
+++ b/Shooting_Star.mw
@@ -1,4 +1,4 @@
-'''«Shooting Star»''' (''Lanktud tähtaz'') om jäl'gmäine [[Modern Talking]]:an pajo. Om sätud [[2003]]-žes vodes; no kompozicii om pästtud vaiše [[2006]]-žes vodes gruppan čihodamižen tagut.
+'''«Shooting Star»''' (''Lanktud tähtaz'') om jäl'gmäine [[Modern Talking]]:an pajo. Om sädud [[2003]]-žes vodes; no kompozicii om pästtud vaiše [[2006]]-žes vodes gruppan čihodamižen tagut.
 
 Nece pajo langetud [[Dieter — Der Film:an saundtrek]]as.
 {{stub}}
