*Empty MediaWiki Message*

--- a/Gog_Vinsent_van.mw
+++ b/Gog_Vinsent_van.mw
@@ -3,7 +3,7 @@
 [[Fail:Vincent van Gogh 1866.jpg|thumb|left|150px|van Gog vl. 1866]]
 '''Vinsent Villem van Gog''' ([[alaman kel'|alam.]] ''Vincent Willem van Gogh''; 30.03.1853, Grot-Yündert läz [[Bred]]ad - 29.07.1890, [[Over sür Uaz]], [[Francii]]) oli kaikes mail'mas tutab pirdai, [[postimpressionizm|postimpressionist]].
 
-Kaik van Gogan sädused (ümbri 900 voimujupirdandoid da 1100 grafiktöd) oma sätud kümnes vodes. Hän om pirnu äjan avtoportretoid, peizažid, natürmortid änikoidenke.
+Kaik van Gogan sädused (ümbri 900 voimujupirdandoid da 1100 grafiktöd) oma sädud kümnes vodes. Hän om pirnu äjan avtoportretoid, peizažid, natürmortid änikoidenke.
 
 Van Gogal oli hengenläžund, ližaks, hän läžui alkogolizmal; 37 voden igäs hän rikoi ičtaze (ambui südäikerha).
 
