*Empty MediaWiki Message*

--- a/Resling.mw
+++ b/Resling.mw
@@ -1,7 +1,7 @@
 [[Fail:Young Lions cup action in Strathroy.jpg|thumb|right|250px|Tipine gruppvoibištelend reslingas]]
 '''Resling''' ([[anglijan kel'|anglijan kelel]] om ''wrestling'' — ''borcuind'') om [[teatr]]aline lavastuzborcuind, kudamban vägestai om tetab aigvodhe.
 
-Reslingan kodima om [[Francii]], kus nece [[šou]]n tip om sätud [[19. voz'sada|19. voz'sadas]] (siloi oli tetab kut ''francijalaine borcuind''). Nügüd' se om lujas populärine kaiked mail'madme, sidä kesken [[Venäma]]s.
+Reslingan kodima om [[Francii]], kus nece [[šou]]n tip om sädud [[19. voz'sada|19. voz'sadas]] (siloi oli tetab kut ''francijalaine borcuind''). Nügüd' se om lujas populärine kaiked mail'madme, sidä kesken [[Venäma]]s.
 
 Kaikiš suremb reslingfederacii om ''[[World Wrestling Entertainment]] (WWE)''.
 {{stub}}
