*Empty MediaWiki Message*

--- a/Jumal.mw
+++ b/Jumal.mw
@@ -2,9 +2,9 @@
 [[Fail:Mondragon - S, Juan Bautista 05.jpg|thumb|right|250px|«Jumal-tat»-skul'ptur [[Gipuskoa]]späi ([[Baskanma]], [[Ispanii]])]]
 '''Jumal''' om suren, sakraližen [[Ülembaine Olii|Ülembaižen Olijan]] nimi [[teizm|teistižiš]] da [[deizm|deistižiš]] uskondoiš.
 
-[[Monoteizm|Monoteistižiš religijoiš]] ([[hristanuskond]], [[islam]], [[iudaizm]]) Jumal om [[Absolüt (filosofii)|Absolütan]] personofikacii, transcendentine ülembaižen realižusen avaiduz, i ližaks Hän om ühthine da üks'jäine, ei ole Hänen pojavad. [[Politeizm|Politeistižiš religijoiš]] oma äi jumaloid, eriližiden „funkcijoidenke“ i parembuzidenke; no heiden keskes om päjumal (ozutesikš, [[Jumou]] [[vepsän mifologii|vepsän mifologijaspäi]]; m. k. [[monolatrii]]).
+[[Monoteizm|Monoteistižiš religijoiš]] ([[hristanuskond]], [[islam]], [[iudaizm]]) Jumal om [[Absolüt (filosofii)|Absolütan]] personofikacii, transcendentine ülembaižen realižusen avaiduz, i ližaks Hän om ühthine da üks'jäine, ei ole Hänen pojavid. [[Politeizm|Politeistižiš religijoiš]] om äi jumaloid, eriližiden „funkcijoidenke“ i parembuzidenke; no heiden keskes om päjumal (ozutesikš, [[Jumou]] [[vepsän mifologii|vepsän mifologijaspäi]]; m. k. [[monolatrii]]).
 
-70—80% ristitištod kaiked mail'madme uskotas Jumalho.
+70—80% ristitištod kaiked mail'madme uskotas Jumalha.
 
 == Kacu mugažo ==
 * [[Jumalnaine]]
