Можно потихоньку готовиться))

--- a/Evrovizii-2013.mw
+++ b/Evrovizii-2013.mw
@@ -1,3 +1,4 @@
+[[Fail:Logoeurovision2013.jpg|thumb|right|225px|Evrovizii-2013- konkursan logotip]]
 '''Evrovizii-2013''' ([[Anglijan kel'|angl.]] ''Eurovision Song Contest 2013'', [[Francijan kel'|fr.]] ''Concours Eurovision de la chanson 2013'', [[Venäkel'|ven.]] ''Конкурс песни Евровидение 2013'') linneb 58-ndeks [[Evrovizii]]-konkursaks, kudamb oigendase [[Ročinma]]s, [[2013]] vodel.
 
 == Irdkosketused ==
