--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -1,18 +1,23 @@
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''Sverige'''<br />'''Ročinma'''</big></big>
-|-
-| style="background:#efefef;" align="center" colspan=2 |
-{| border="0" cellpadding="2" cellspacing="0"
-|-
-| align="center" width="140px" | [[Fail:Flag of Sweden.svg|150px]]
-| align="center" width="140px" | [[Fail:Greater coat of arms of Sweden.svg|150px]]
-|-
-| align="center" width="140px" | 
-| align="center" width="140px" | 
-|}
-|-
-| align=center colspan=2 | [[Fail:EU-Sweden.svg|300px]]
-|}
+{{Valdkund
+| Nimi = Ročinma<br />Sverige
+| Valdkundznam = Greater coat of arms of Sweden.svg
+| Flag = Flag of Sweden.svg
+| Valdkundznam text = Ročinman valdkundznam
+| Flag text = Ročinman flag
+| Pälidn = Stokhol'm
+| Eläjiden lugu = 9.555.893
+| Voz' = 2012
+| Pind = 449.964
+| Kart = EU-Sweden.svg
+| Kel' = [[ročin kel']]
+| Valdkundan pämez' = [[Reinfeldt Fredrik|Fredrik Reinfeldt]]
+| Päministr = [[Reinfeldt Fredrik|Fredrik Reinfeldt]]
+| Religii = [[hristanuskond]]
+| Valüt = [[ročinma krona]] (SEK)
+| Internet-domen = [[.se]]
+| Telefonkod = +46
+| Aigvö = [[UTC]]+1
+}}
 '''Ročinma''' ([[ročin kel'|roč.]]: ''Sverige'') — valdkund [[Evropa]]s. [[EÜ]]n ühtnii.
 
 Eläjiden lugu — 9,4 mln.</br>
