-<!--Bangladešan prezident om [[Rahman Zillur|Zillur Rahman]]; päministr-->

--- a/Bangladeš.mw
+++ b/Bangladeš.mw
@@ -24,7 +24,7 @@
 
 Eläjiden lugu om 142,319,000 ristitud (2011). Pind om läz 144,000 km².
 
-<!--Bangladešan prezident om [[Rahman Zillur|Zillur Rahman]]; päministr--> Päministr om [[Hasina Šeih|Šeih Hasina]].
+Päministr om [[Hasina Šeih|Šeih Hasina]].
 {{stub}}
 
 [[Kategorii:Bangladeš|*]]
