*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -9,11 +9,11 @@
 | Voz' = 2012
 | Pind = 449.964
 | Kart = EU-Sweden.svg
-| Kel' = [[ročin kel']]
-| Valdkundan pämez' = [[Reinfeldt Fredrik|Fredrik Reinfeldt]]
-| Päministr = [[Reinfeldt Fredrik|Fredrik Reinfeldt]]
-| Religii = [[hristanuskond]]
-| Valüt = [[ročinma krona]] (SEK)
+| Kel' = [[ročin kel'|ročin]]
+| Valdkundan pämez' = [[Karl XVI Gustav]]
+| Päministr = [[Rainfel'dt Jon Fredrik|Jon Fredrik Rainfel'dt]]
+| Religii = [[ateizm]], [[hristanuskond]]
+| Valüt = [[ročinman kron]]
 | Internet-domen = [[.se]]
 | Telefonkod = +46
 | Aigvö = [[UTC]]+1
