*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -18,7 +18,7 @@
 | Telefonkod = +46
 | Aigvö = [[UTC]]+1
 }}
-'''Ročinma''' ([[ročin kel'|roč.]]: ''Sverige'') — valdkund [[Evropa]]s. [[EÜ]]n ühtnii.
+'''Ročinma''' ([[ročin kel'|roč.]]: ''Sverige'') — valdkund [[Evropa]]s. [[EÜ]]:n ühtnii.
 
 Eläjiden lugu — 9,4 mln.</br>
 Pind — 449 964 km<sup>2</sup>.
