*Empty MediaWiki Message*

--- a/Bel'gii.mw
+++ b/Bel'gii.mw
@@ -1,22 +1,27 @@
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''Koninkrijk België'''<br />'''Royaume de Belgique'''<br />'''Königreich Belgien'''<br />'''Bel'gijan kunigahuz'''</big></big>
-|-
-| style="background:#efefef;" align="center" colspan=2 |
-{| border="0" cellpadding="2" cellspacing="0"
-|-
-| align="center" width="140px" | [[Fail:Flag of Belgium.svg|150px|Belgijan flag]]
-| align="center" width="140px" | [[Fail:Coats of arms of Belgium Government.svg|150px|Bel'gijan valdkundznam]]
-|-
-| align="center" width="140px" | Bel'gijan flag
-| align="center" width="140px" | Bel'gijan valdkundznam
-|}
-|-
-| align=center colspan=2 | [[Fail:EU-Belgium.svg|300px]]
-|}
+{{Valdkund
+| Nimi = Bel'gii<br />België<br />Belgique<br />Belgien
+| Flag = Flag of Belgium.svg
+| Valdkundznam = Coats of arms of Belgium Government.svg
+| Valdkundznam text = Bel'gijan valdkundznam
+| Flag text = Bel'gijan flag
+| Pälidn = Brüssel'
+| Eläjiden lugu = 10 444 268
+| Voz' = 2013
+| Pind = 30 528
+| Kart = EU-Belgium.svg
+| Kel' = [[alaman kel'|alaman]], [[francijan kel'|francijan]], [[saksan kel'|saksan]]
+| Valdkundan pämez' = [[Al'bert II]]
+| Päministr = [[Di Rupo Eliot|Eliot di Rupo]]
+| Religii = [[ateizm]], [[hristanuskond]]
+| Valüt = [[evro]]
+| Internet-domen = [[.be]]
+| Telefonkod = +46
+| Aigvö = [[UTC]]+1
+}}
 '''Bel'gii''' ([[Niderlandan kel'|niderl.]]: ''België'', fr.: ''Belgique'', [[Saksan kel'|saksan]]: ''Belgien'') om valdkund Evropas, Pohjoižen meren randal, [[EÜ]]n ühtnii. Bel'gijan oma mavaldkundröunad [[Alamad|Alamaidenke]], [[Germanii|Germanijanke]], [[Lüksemburg]]anke da [[Francii|Francijanke]].
 
 Pälidn — [[Brüssel']].</br>
-Eläjiden lugu — 10,8 mil.</br>
+Eläjiden lugu — 10,5 mil.</br>
 Pind — 30 528 km².</br>
 Ohjandusen form — [[Konstitucine monarhii]].
 
