--- a/Gaz.mw
+++ b/Gaz.mw
@@ -2,10 +2,12 @@
 [[Fail:Diossido di azoto.jpg|thumb|340px|Gaz [[Azotan oksid (IV)|NO<sub>2</sub>]]]]
 '''Gaz''' om substancijan agregatine olend, kudambas sidod [[molekul]]oiden, [[atom]]iden, [[ion]]iden keskes oma lujas välläd. Ližaks, nened heničud likudas gazas lujas hotkas.
 
-Kut i nozolused, gazad voidas valuda i vastustadas deformacijale. No gazoil ei oleskele fiksiruidud mülüd.
+Kut i [[nozoluz|nozolused]], gazad voidas valuda i vastustadas deformacijale. No gazoil ei oleskele fiksiruidud mülüd.
 
 Gazad oma lujas levitadud londuses, mail'mas.
 {{stub}}
 
 [[Kategorii:Fizik]]
 [[Kategorii:Himii]]
+[[Kategorii:Gaz|*]]
+[[Kategorii:Gazad|*]]
