*Empty MediaWiki Message*

--- a/Iisus_Hristos.mw
+++ b/Iisus_Hristos.mw
@@ -1,6 +1,6 @@
 {{1000}}
 [[Fail:00058 christ pantocrator mosaic hagia sophia 656x800.jpg|thumb|right|250px|Iisus Hristos]]
-'''Iisus Hristos''' ([[grekan kel'|grek.]]: ''Ἰησοῦς Χριστός'', [[latinan kel'|lat.]]: ''Iesus Christus'', [[evrejan kel'|evr.]]: ''ישו הנוצרי'', [[araban kel'|arab.]]: ''يسوع'', [[aramejan kel'|aram.]]: ''ܝܫܘܥ ܢܨܪܝܐ'') om [[hristanuskond]]an keskuzfigur, hristanižiden jumal. [[Islam]]as Hän om üks' päendustajašpäi.
+'''Iisus Hristos''' ([[grekan kel'|grek.]]: ''Ἰησοῦς Χριστός'', [[latinan kel'|lat.]]: ''Iesus Christus'', [[evrejan kel'|evr.]]: ''ישו הנוצרי'', [[araban kel'|arab.]]: ''يسوع'', [[aramejan kel'|aram.]]: ''ܝܫܘܥ ܢܨܪܝܐ'') om [[hristanuskond]]an keskuzfigur, hristanižiden [[Jumal]]. [[Islam]]as Hän om üks' päendustajašpäi.
 
 == Kacu mugažo ==
 * [[Hristanuskond]]
