--- a/Alamad.mw
+++ b/Alamad.mw
@@ -13,7 +13,7 @@
 | Kel' = [[Alaman kel'|alaman]]
 | Valdkundan pämez' = [[Villem-Aleksandr]]
 | Päministr = [[Rütte Mark|Mark Rütte]]
-| Religii = [[hristanuskond]]
+| Religii = [[ateizm]], [[hristanuskond]]
 | Valüt = [[evro]]
 | Internet-domen = [[.nl]]
 | Telefonkod = +31
