--- a/Balabanov_Aleksei.mw
+++ b/Balabanov_Aleksei.mw
@@ -1,5 +1,5 @@
 [[Fail:Balabanov 001.jpg|thumb|right|300px|Aleksei Balabanov]]
-'''Aleksei Oktäbrinovič Balabanov''' ([[Venäkel'|ven.]] ''Алексей Октябринович Балабанов'', sünd. [[25. uhoku]] [[1959]], [[Jekaterinburg|Sverdlovsk]]) om [[Venäma|venälaine]] režissör, scenarist, prodüser da aktör.
+'''Aleksei Oktäbrinovič Balabanov''' ([[Venäkel'|ven.]] ''Алексей Октябринович Балабанов''; [[25. uhoku]] [[1959]], [[Jekaterinburg|Sverdlovsk]] — [[18. semendku]] [[2013]], [[Solnečnoje (Piter)|Solnečnoje]], [[Piter]]) oli [[Venäma|venälaine]] režissör, scenarist, prodüser da aktör.
 
 == Fil'mad ==
 * ''[[Minä-ki tahtoin]]'' (Я тоже хочу) (2012)
@@ -17,7 +17,7 @@
 * ''[[Ozakahad päiväd]]'' (Счастливые дни) (1991)
 
 == Kacu mugažo ==
-* [http://alekseybalabanov.ru/ Sait Balabanovan polhe]
+* [http://alekseybalabanov.ru/ Sait Aleksejan Balabanovan polhe]
 
 {{Aleksejan Balabanovan fil'mad}}
 {{stub}}
