*Empty MediaWiki Message*

--- a/Evrovizii-1956.mw
+++ b/Evrovizii-1956.mw
@@ -1,3 +1,3 @@
-'''Evrovizii-1956''' ([[anglijan kel'|angl.]] ''Eurovision Song Contest 1956'', [[francijan kel'|fr.]] ''Concours Eurovision de la chanson 1956'') oli ezmäine [[Evrovizii]]-konkursaks, kudamb oli oigetud [[24. semendku]] [[1956]], [[Lugano]]s, [[Šveicarii|Šveicarijas]]. Konkursan vägestai oli Šveicarijan artist [[Assia Liz|Liz Assia]].
+'''Evrovizii-1956''' ([[anglijan kel'|angl.]] ''Eurovision Song Contest 1956'', [[francijan kel'|fr.]] ''Concours Eurovision de la chanson 1956'') oli ezmäine [[Evrovizii]]-konkurs, kudamb oli oigetud [[24. semendku|semendkun 24. päiväl]] vl [[1956]] [[Lugano]]s, [[Šveicarii|Šveicarijas]]. Konkursan vägestai oli Šveicarijan artist [[Assia Liz|Liz Assia]].
 
 [[Kategorii:Evrovizii]]
