*Empty MediaWiki Message*

--- a/Evrovizijan_vägestajad.mw
+++ b/Evrovizijan_vägestajad.mw
@@ -655,13 +655,13 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | [[Fail:Flag of Azerbaijan.svg|border|20px]] [[Baku]]
 |-
 ! scope="row" | [[Evrovizii-2013|2013]]
-| 
-| 
-| 
-| 
-| 
-| 
-| 
+| [[Fail:Flag of Denmark.svg|border|20px]] [[Danii]]
+| «[[Only Teardrops]]»
+| [[De Forest Emmili|Emmili de Forest]]
+| ''Lise Cabble'', ''Julia Fabrin Jakobsen'', ''Thomas Stengaard''
+| 281
+| 47
+| [[Azerbaidžan]]
 | 18. semendku
 | [[Fail:Flag of Sweden.svg|border|20px]] [[Malmö]]
 |}
