*Empty MediaWiki Message*

--- a/Evrovizijan_vägestajad.mw
+++ b/Evrovizijan_vägestajad.mw
@@ -15,7 +15,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 ! scope="row" | [[Evrovizii-1956|1956]]
 | [[Fail:Flag of Switzerland.svg|border|20px]] [[Šveicarii]]
 | «[[Refrain]]»
-| [[Assia Liz|Liz Assia]]
+| [[Assija Liz|Liz Assija]]
 | ''Géo Voumard'', ''Émile Gardaz''
 | ei ole
 | ei ole
