надо бы ещё к прошлому году всех полуфиналистов приписать, но только после финала.

--- a/Evrovizii-2013.mw
+++ b/Evrovizii-2013.mw
@@ -1,7 +1,7 @@
 [[Fail:Logoeurovision2013.jpg|thumb|right|215px|Evrovizii-2013- konkursan logotip]]
 '''Evrovizii-2013''' ([[Anglijan kel'|angl.]] ''Eurovision Song Contest 2013'', [[Francijan kel'|fr.]] ''Concours Eurovision de la chanson 2013'', [[Venäkel'|ven.]] ''Конкурс песни Евровидение 2013'') oli 58. [[Evrovizii]]-konkurs, kudamb oigenziše [[Ročinma]]s, [[2013]] vodel.
 
-2013-žen voden vägestai — [[De Forest Emmili|Emmili de Forest]]. Venälaine edestai, [[Garipova Dina|Dina Garipova]], linni 5-ndeks.
+2013-žen voden vägestai — '''[[De Forest Emmili|Emmili de Forest]]'''. Venälaine edestai, [[Garipova Dina|Dina Garipova]], linni 5-ndeks.
 
 == Irdkosketused ==
 * [http://eurovision.tv Evrovizii-konkursan oficialine sait]
