*Empty MediaWiki Message*

--- a/Evrovizii-2012.mw
+++ b/Evrovizii-2012.mw
@@ -262,4 +262,4 @@ Konkursan vägestai oli [[Ročinma|ročine]] pajatai '''[[Lorin]]'''.
 * [http://eurovision.tv Evrovizii-konkursan oficialine sait]
 * [http://euroforum.com.ru Oficialine venäkel'ne forum]
 
-[[Kategorii:Evrovizii]]
+[[Kategorii:Evrovizii|2012]]
