*Empty MediaWiki Message*

--- a/Kana.mw
+++ b/Kana.mw
@@ -1,6 +1,6 @@
 {{1000}}
-[[Fail:Female pair.jpg|300px|pisi|Kana]]
-'''Kana''' (lat.: ''Gallus gallus'') om [[lind]].
+[[Fail:Female pair.jpg|235px|pisi|[[Kukoi]] i kana]]
+'''Kana''' ([[Latinan kel'|lat.]]: ''Gallus gallus'') om [[lind]].
 
 {{stub}}
 
