*Empty MediaWiki Message*

--- a/Todorova_Jelica.mw
+++ b/Todorova_Jelica.mw
@@ -1,5 +1,5 @@
 [[Fail:Elitsa TODOROVA and Stoyan YANKOULOV.jpg|thumb|right|300px|Jelica Todorova i [[Jankulov Stojan|Stojan Jankulov]]]]
-'''Jelica Todorova Todorova''' ([[Bolgarijan kel'|bolg.]] ''Елица Тодорова Тодорова''; [[2. sügüz'ku]] [[1977]], [[Varn]], [[Bolgarii]]) om [[Bolgarii|bolgarijalaine]] [[folk]]-pajatai i professionaline [[perkussionist]].
+'''Jelica Todorova Todorova''' ([[Bolgarijan kel'|bolg.]] ''Елица Тодорова Тодорова''; sünd. [[2. sügüz'ku]] [[1977]], [[Varn]], [[Bolgarii]]) om [[Bolgarii|bolgarijalaine]] [[folk]]-pajatai i professionaline [[perkussionist]].
 
 Ühtmudel [[Jankulov Stojan|Stojanan Jankulovanke]] eziti Bolgarijan [[Evrovizii-2013]]-konkursal «[[Samo šampioni]]»-pajonke.
 
