--- a/Jankulov_Stojan.mw
+++ b/Jankulov_Stojan.mw
@@ -1,5 +1,5 @@
 [[Fail:Elitsa TODOROVA and Stoyan YANKOULOV.jpg|thumb|right|300px|[[Jelica Todorova Todorova|Jelica Todorova]] i Stojan Jankulov]]
-'''Stojan Jankulov''' ([[Bolgarijan kel'|bolg.]] ''Стоян Янкулов''; [[10. sügüz'ku]] [[1966]], [[Sofii]], [[Bolgarii]]) om [[Bolgarii|bolgarijalaine]] barabananvändai i [[perkussionist]].
+'''Stojan Jankulov''' ([[Bolgarijan kel'|bolg.]] ''Стоян Янкулов''; sünd. [[10. sügüz'ku]] [[1966]], [[Sofii]], [[Bolgarii]]) om [[Bolgarii|bolgarijalaine]] barabananvändai i [[perkussionist]].
 
 Ühtmudel [[Jelica Todorova Todorova|Jelica Todorovanke]] eziti Bolgarijan [[Evrovizii-2013]]-konkursal «[[Samo šampioni]]»-pajonke.
 
