блин, молодец она)

--- a/Venäma_Evrovizijal.mw
+++ b/Venäma_Evrovizijal.mw
@@ -102,7 +102,7 @@
 | [[Garipova Dina|Dina Garipova]]
 | ''[[What If]]''
 | ''A ku...''
-| align="center" | ?
+| align="center" | 5.
 |}
 {{stub}}
 
