*Empty MediaWiki Message*

--- a/Venäma_Evrovizijal.mw
+++ b/Venäma_Evrovizijal.mw
@@ -17,7 +17,7 @@
 | align="center" | [[Venäma Evrovizijas-1997|1997]]
 | [[Pugačova Alla|Alla Pugačova]]
 | ''[[Primadonna]] [Примадонна]''
-| ''Prima Donna''
+| ''Primadonn''
 | align="center" | 15.
 |-
 | align="center" | [[Venäma Evrovizijas-2000|2000]]
