--- a/Venäma_Evrovizijal.mw
+++ b/Venäma_Evrovizijal.mw
@@ -1,4 +1,5 @@
-'''Venäma [[Evrovizii|Evrovizijas]]''':
+[[Fail:Flag of Russia.svg|border|right|300px]]
+'''[[Venäma]] [[Evrovizii|Evrovizijas]]''':
 {| border="2" cellpadding="2" cellspacing="0" style="margin: 0 1em 0 0; background: #f9f9f9; border: 1px #aaa solid; border-collapse: collapse; font-size: 95%;"
 | align="center" | '''Voz'''' || '''Artist''' || '''Pajo''' || '''Känduz''' || '''Sija finalas'''
 |-
@@ -75,13 +76,13 @@
 | align="center" | 1. 
 |-
 | align="center" | [[Venäma Evrovizijas-2009|2009]]
-| [[Anastasija Prihod'ko|Prihod'ko Anastasija]]
+| [[Prihod'ko Anastasija|Anastasija Prihod'ko]]
 | ''[[Mamo]] [Мамо]''
 | ''Mam!''
 | align="center" | 11.
 |-
 | align="center" | [[Venäma Evrovizijas-2010|2010]]
-| [[Pötr Nalič|Nalič Pötr]]
+| [[Nalič Pötr|Pötr Nalič]]
 | ''[[Lost and Forgotten]]''
 | ''Kadotadud da unohtadud''
 | align="center" | 11.
