--- a/Evrovizii-1956.mw
+++ b/Evrovizii-1956.mw
@@ -1,4 +1,4 @@
-'''Evrovizii-1956''' ([[anglijan kel'|angl.]] ''Eurovision Song Contest 1956'', [[francijan kel'|fr.]] ''Concours Eurovision de la chanson 1956'') oli ezmäine [[Evrovizii]]-konkurs, kudamb oli oigetud [[24. semendku|semendkun 24. päiväl]] vl [[1956]] [[Lugano]]s, [[Šveicarii|Šveicarijas]]. Konkursan vägestai oli šveicarijalaine pajatai '''[[Assija Liz|Liz Assija]]'''.
+'''Evrovizii-1956''' ([[anglijan kel'|angl.]] ''Eurovision Song Contest 1956'', [[francijan kel'|fr.]] ''Concours Eurovision de la chanson 1956'') oli ezmäine [[Evrovizii]]-konkurs, kudamb oli oigetud [[24. semendku|semendkun 24. päiväl]] vl [[1956]] [[Lugano]]s, [[Šveicarii|Šveicarijas]]. Konkursan vägestai oli šveicarijalaine pajatai [[Assija Liz|Liz Assija]].
 {{stub}}
 
 [[Kategorii:Evrovizii|1956]]
