--- a/Samai_Soluna.mw
+++ b/Samai_Soluna.mw
@@ -13,6 +13,7 @@ Vl 2012 hän ezini "[[Evrovizii-2012|Evrovizii]]"-konkursal, kus pajati "[[Shoul
 * ''[[Two Seconds Ago]]'' (2011)
 * ''[[Should've Known Better]]'' (2012)
 * ''[[Come Again (The Quetzal)]]'' (2012)
+* ''[[Humble]]'' (2012)
 
 == Irdkosketused ==
 * [http://www.solunasamay.com/ Oficialine sait]
