--- a/.al.mw
+++ b/.al.mw
@@ -2,6 +2,7 @@
 
 == Irdkosketused ==
 * [http://www.akep.al/ Domenan sait]
+* [http://www.webhost.al/ .al Domain registrar]
 * [http://iana.org/domains/root/db/al.html IANA-informacii]
 
 {{CcTLD}}
