--- a/Lužkovan_stil'.mw
+++ b/Lužkovan_stil'.mw
@@ -1,7 +1,7 @@
 [[Fail:Wiki Egg House, Mashkova Street, Moscow, Russia.jpg|thumb|right|250px|„Kodi-muna“]]
 M. k. '''„Lužkovan stil'“''' om [[neologizm]] [[Moskv]]an stiližiden eriližusiden znamoičendan täht [[Lužkov Jurii|Jurijan Lužkovan]] lidnanohjandusen {{k|градоуправления}} pordos.
 
-Lužkovan sauvusiden pästilid oma [[postmodernizm]], [[eklektik (stil')|eklektik]], [[istorizm]], [[kič]]. Harakterizuitud pertišton sistematomal.
+Lužkovan sauvusiden pästilid oma [[postmodernizm]], [[eklektik (stil')|eklektik]], [[istorizm]], [[kitč]]. Harakterizuitud pertišton sistematomal.
 
 Nece «stil'» sadi äi kritikad čomamahtmehišpäi.
 
