*Empty MediaWiki Message*

--- a/Ses_plus_grands_succès.mw
+++ b/Ses_plus_grands_succès.mw
@@ -1,4 +1,4 @@
-'''«Ses plus grands succès»''' (''Hänen paremb saduz'') om [[Desireless]]:an „best hits“-al'bom, pästtud [[2003]]. vodes.
+'''«Ses plus grands succès»''' (''Hänen paremb saduz'') om [[Desireless]]:an „[[best hits]]“-al'bom, pästtud [[2003]]. vodes.
 
 == Pajoiden kirjutez ==
 # ''[[Voyage, voyage]]'' (4:23)
@@ -20,5 +20,5 @@
 # ''[[Voyage, voyage]] (PWL remix)'' (7:03)
 {{stub}}
 
-[[Kategorii:Al'bomad kirjamišton mödhe]]
+[[Kategorii:Kompiläcijanal'bomad kirjamišton mödhe]]
 [[Kategorii:Desireless:an al'bomad]]
