--- a/Lužkovan_stil'.mw
+++ b/Lužkovan_stil'.mw
@@ -1,9 +1,9 @@
 [[Fail:Wiki Egg House, Mashkova Street, Moscow, Russia.jpg|thumb|right|250px|„Kodi-muna“]]
 M. k. '''„Lužkovan stil'“''' om [[neologizm]] [[Moskv]]an stiližiden eriližusiden znamoičendan täht [[Lužkov Jurii|Jurijan Lužkovan]] lidnanohjandusen {{k|градоуправления}} pordos.
 
-Lužkovan sauvusiden pästilid oma [[postmodernizm]], [[eklektik (stil')|eklektik]], [[istorizm]], [[kitč]]. Harakterizuitud pertišton sistematomal.
+Lužkovan sauvusiden pästilid oma [[postmodernizm]], [[eklektik (stil')|eklektik]], [[istorizm]], [[kitč]]. Harakterizuidud pertišton sistematomusel.
 
-Nece «stil'» sadi äi kritikad čomamahtmehišpäi.
+Nece «stil'» sai äi kritikad čomamahtmehišpäi.
 
 == Kacu mugažo ==
 * [[Lužkov Jurii|Jurii Lužkov]], [[Cereteli Zurab|Zurab Cereteli]]
