*Empty MediaWiki Message*

--- a/Diamonds.mw
+++ b/Diamonds.mw
@@ -1,4 +1,4 @@
-'''«Diamonds»''' (''Bril'jantad''; mugažo — '''«Diamonds — Her Greatest Hits»''' (''Bril'jantad — Hänen parahimed hitad'')) om [[C. C. Catch]]:an ezmäine kompiläcijanal'bom, pästtud [[1988]]. voden [[16. semendku|semendkun 16. päiväl]]. Erasiš purtkideš «Diamonds» pandatas märha kut erine al'bom.
+'''«Diamonds»''' (''Bril'jantad''; mugažo — '''«Diamonds — Her Greatest Hits»''' (''Bril'jantad — Hänen parahimad hitad'')) om [[C. C. Catch]]:an ezmäine kompiläcijanal'bom, pästtud [[1988]]. voden [[16. semendku|semendkun 16. päiväl]]. Erasiš purtkideš «Diamonds» pandatas märha kut erine al'bom.
 
 Al'bomas, päiči aigaližiš hitoiš, om uded pajod-ki — «[[House of Mystic Lights]]», «Don't Shoot My Sheriff Tonight» da «Do You Love As You Look» (ezmäine oli pästtud kut singl).
 
