*Empty MediaWiki Message*

--- a/Azartvänd.mw
+++ b/Azartvänd.mw
@@ -1,6 +1,6 @@
 {{1000}}
-[[Fail:The_Cardsharps.jpg|thumb|right|285px|"Šullerad", [[Karavadžo]]n kuva, 1594]]
-'''Azartvänd''' ([[Francijan kel'|franc.]] ''jeu de hasard'' — statjan vänd) om [[vänd]], kudambas vägestuz kogonaz vai sures märas rippub ei vändajiden mahtospäi, a statjaspäi.
+[[Fail:The Cardsharps.jpg|thumb|right|285px|"Šullerad", [[Karavadžo]]n kuva, 1594]]
+'''Azartvänd''' ([[Francijan kel'|franc.]] ''jeu de hasard'' — statjan vänd) om [[vänd]], kudambas vägestuz kogonaz vai sures märas rippub ei vändajiden mahtospäi, a [[satuz|statjaspäi]].
 
 {{stub}}
 
