*Empty MediaWiki Message*

--- a/Andrejeva_Alevtina.mw
+++ b/Andrejeva_Alevtina.mw
@@ -1,6 +1,7 @@
-'''Alevtina Andrejeva''' (1938 — 2001) — [[Vepsän kel'|vepsän]] runokirjutai. Runod kodirandas, sen ristituiš, armastuses, elos. Runokirj "Koivuine" (surmanjäl’ghine, 2003), runod erazvuiččiš keradusiš, aiglehtesiš, lehtesiš. Oli ranu Karjalan televizijas (vepsän redakcijas).
+'''Alevtina Andrejeva''' (1938 — 2001) — [[Vepsän kel'|vepsän]] runokirjutai. Runod kodirandas, sen ristituiš, armastuses, elos. Runokirj "Koivuine" (surmanjäl'ghine, 2003), runod erazvuiččiš keradusiš, aiglehtesiš, lehtesiš. Oli ranu Karjalan televizijas (vepsän redakcijas).
 {{stub}}
 
-[[Category:Kirjutajad|A]]
-[[Category:Vepsän kirjutajad|A]]
-[[Category:Vepsän lehtezmehed|A]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Vepsän kirjutajad]]
+[[Kategorii:Vepsän lehtezmehed]]
+[[Kategorii:Venäman kirjutajad]]
