*Empty MediaWiki Message*

--- a/Adams_Duglas.mw
+++ b/Adams_Duglas.mw
@@ -2,6 +2,7 @@
 '''Duglas Noel' Adams''' ([[anglijan kel'|angl.]]: ''Douglas Noël Adams''; sünd. [[11. keväz'ku]] [[1952]], [[Kembridž]], [[Anglii]], [[Sur' Britanii]] — kol. [[11. semendku]] [[2001]], [[Santa Barbar (Kalifornii)]], [[AÜV]]) oli britanijalaine kirjutai, dramaturg da kinotarinantegii, jumoristižed i [[fantastik|fantastižed]] sanutesiden tegii. Üks' kaikiš tetabižiš verkoišpäi — «[[Avtostopal galaktikadme]]»-kirjserii.
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
 [[Kategorii:Dramaturgad]]
 [[Kategorii:Kinotarinantegijad]]
