--- a/Adams_Duglas.mw
+++ b/Adams_Duglas.mw
@@ -3,6 +3,6 @@
 {{stub}}
 
 [[Kategorii:Kirjutajad kirjamišton mödhe]]
-[[Kategorii:Venäman kirjutajad]]
+[[Kategorii:AÜV:oiden kirjutajad]]
 [[Kategorii:Dramaturgad]]
 [[Kategorii:Kinotarinantegijad]]
