*Empty MediaWiki Message*

--- a/Aleksandra_Marinina.mw
+++ b/Aleksandra_Marinina.mw
@@ -59,5 +59,6 @@
 * ''[[Tigroiden tora alangištos]]'' (2012)
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
-[[Kategorii:Aleksandra Marinina]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
+[[Kategorii:Aleksandra Marinina|*]]
