*Empty MediaWiki Message*

--- a/Alpatov_Mihail.mw
+++ b/Alpatov_Mihail.mw
@@ -3,4 +3,5 @@
 Kirjuti istorižid romanoid, tobjimalaz [[donan kozakad|donan kozakišton]] da postimperialistižen pordon polhe.
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
