--- a/Deržavin_Gavriil.mw
+++ b/Deržavin_Gavriil.mw
@@ -3,5 +3,6 @@
 
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
 [[Kategorii:Runokirjutajad]]
