*Empty MediaWiki Message*

--- a/Doncova_Dar'ja.mw
+++ b/Doncova_Dar'ja.mw
@@ -4,4 +4,5 @@
 Kirjuti enamb mi 250 kirjad.
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
