*Empty MediaWiki Message*

--- a/Dostojevskii_Födor.mw
+++ b/Dostojevskii_Födor.mw
@@ -47,5 +47,6 @@
 
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
-[[Kategorii:Födor Dostojevskii|!]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
+[[Kategorii:Födor Dostojevskii|*]]
