*Empty MediaWiki Message*

--- a/Födorova_Oksana.mw
+++ b/Födorova_Oksana.mw
@@ -9,4 +9,5 @@
 
 [[Kategorii:Fotomodelid]]
 [[Kategorii:TV-vedajad]]
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
