--- a/Fomin_Nikolai.mw
+++ b/Fomin_Nikolai.mw
@@ -1,6 +1,7 @@
 '''Nikolai Fomin''' — vepsläine kirjutai, üks' [[Kodima|«Kodima»-lehtesen]] redaktorišpäi. Sanutesed i publicistik erazvuiččiš kirjoiš da periodikas.
 {{stub}}
 
-[[Category:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
 [[Category:Vepsän lehtezmehed]]
 [[Category:Vepsän kirjutajad]]
