--- a/Garvud_Džuli.mw
+++ b/Garvud_Džuli.mw
@@ -3,4 +3,5 @@
 Mugažo hän kirjutab Emili Čeiz- (''Emily Chase'') psevdoniman al.
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:AÜV:oiden kirjutajad]]
