--- a/Gončarov_Viktor.mw
+++ b/Gončarov_Viktor.mw
@@ -1,4 +1,5 @@
 '''Viktor Mihailovič Gončarov''' ([[venäkel'|ven.]]: ''Виктор Михайлович Гончаров''; sünd. [[7. kül'mku]] [[1920]], [[Krasnodar]], [[NSTÜ]] — kol. [[13. semendku]] [[2001]], [[Moskv]], [[Venäma]]) oli nevondkundaline i venälaine kirjutai, runokirjutai da pirdai. [[Sur' Kodiman voin|Suren Kodiman voinan]] toranik. Sai valdkundaližiden arvlahjoiden riven.
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
