--- a/Gügo_Viktor.mw
+++ b/Gügo_Viktor.mw
@@ -1,9 +1,10 @@
 {{1000}}
 [[Fail:Victor Hugo.jpg|pisi|250px|Viktor Gügo]]
-'''Viktor Mari Gügo''' (francijan: ''Victor Marie Hugo''; 26.02.1802, [[Bezanson]] — 22.05.1885, [[Pariž]]) — [[Francii|francijalaine]] kirjutai, runokirjutai, prozankirjutai da dramaturg, francijalaižen [[Romantizm|romantizman]] pävei da teoretik. [[Francijalaine akademii|Francijalaižen akademijan]] ühtnii (1841).
+'''Viktor Mari Gügo''' (francijaks: ''Victor Marie Hugo''; 26.02.1802, [[Bezanson]] — 22.05.1885, [[Pariž]]) — [[Francii|francijalaine]] kirjutai, runokirjutai, prozankirjutai da dramaturg, francijalaižen [[Romantizm|romantizman]] pävei da teoretik. [[Francijalaine akademii|Francijalaižen akademijan]] ühtnii (1841).
 
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Francijan kirjutajad]]
 [[Kategorii:Runokirjutajad]]
 [[Kategorii:Dramaturgad]]
