*Empty MediaWiki Message*

--- a/Hamsun_Knut.mw
+++ b/Hamsun_Knut.mw
@@ -36,5 +36,6 @@
 * 1949 — Kazdud tehuzidme (Paa gjengrodde Stier)
 
 {{stub}}
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Norvegijan kirjutajad]]
 [[Kategorii:Knut Hamsun|!]]
