--- a/Hibbert_Eleanor.mw
+++ b/Hibbert_Eleanor.mw
@@ -13,4 +13,5 @@ Hän kirjuti istorižid, gotikaižid da armastuzromanoid.
 * Filippa Karr (''Philippa Carr'')
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Suren Britanijan kirjutajad]]
