*Empty MediaWiki Message*

--- a/K'jerkegor_Sören.mw
+++ b/K'jerkegor_Sören.mw
@@ -4,4 +4,5 @@
 
 [[Kategorii:Filosofad]]
 [[Kategorii:Teologad]]
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Danijan kirjutajad]]
