*Empty MediaWiki Message*

--- a/Kervud_Džeims.mw
+++ b/Kervud_Džeims.mw
@@ -41,5 +41,6 @@
 
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:AÜV:oiden kirjutajad]]
 [[Kategorii:Londusenkaičend]]
