*Empty MediaWiki Message*

--- a/Kislov_Aleksandr.mw
+++ b/Kislov_Aleksandr.mw
@@ -1,4 +1,5 @@
 '''Aleksandr Stepanovič Kislov''' ([[venäkel'|ven.]]: ''Александр Степанович Кислов''; sünd. [[1808]], [[Piter]] — kol. [[1866]], sigä-žo) oli venälaine kirjutai da [[kelentedo]]n professor. Kirjuti kuverz'-se tedoradod [[mineralogii|mineralogijan]] polhe, a mugažo istorižed romanad.
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
