--- a/Lardot_Raisa.mw
+++ b/Lardot_Raisa.mw
@@ -22,6 +22,7 @@ Kaikiš tetabamb runokirj — „[[Däižed lindud lanktoba oksilpei]]“.
 * ''Jotain häikkää'' (2011)
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Suomenman kirjutajad]]
 [[Kategorii:Vepsän kirjutajad]]
 [[Kategorii:Vepsän runokirjutajad]]
