*Empty MediaWiki Message*

--- a/Lönnrot_Elias.mw
+++ b/Lönnrot_Elias.mw
@@ -10,4 +10,5 @@
 * [http://www.kaapeli.fi/maailma/kalevala/kalevala.htm Kalevala suomen kelel]
 
 {{stub}}
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Suomenman kirjutajad]]
