--- a/Merežkovskii_Dmitrii.mw
+++ b/Merežkovskii_Dmitrii.mw
@@ -8,5 +8,6 @@
 {{Reflist}}
 
 {{stub}}
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
 [[Kategorii:Kändmižtegijad]]
