*Empty MediaWiki Message*

--- a/Mikel'andželo.mw
+++ b/Mikel'andželo.mw
@@ -6,5 +6,5 @@
 
 [[Kategorii:Pirdajad]]
 [[Kategorii:Skul'ptorad]]
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
 [[Kategorii:Arhitektorad]]
