--- a/Ostin_Džein.mw
+++ b/Ostin_Džein.mw
@@ -1,5 +1,6 @@
 [[Fail:Jane Austen (chopped).jpg|thumb|right|250px|Džein Ostin]]
-'''Džein Ostin''' ([[anglijan kel'|angl.]]: ''Jane Austen''; sünd. [[16. tal'vku]] [[1775]], [[Stiventon (Hempšir)]], [[Anglii]] — kol. [[18. heinku]] [[1817]], [[Uinčester (Anglii)]]) oli tetab anglijalaine kirjutai. Hän kirjuti armastuz- da [[moraline roman|moraližed romanad]].
+'''Džein Ostin''' ([[anglijan kel'|angl.]]: ''Jane Austen''; sünd. [[16. tal'vku]] [[1775]], [[Stiventon (Hempšir)]], [[Anglii]] — kol. [[18. heinku]] [[1817]], [[Uinčester (Anglii)]]) oli tetab anglijalaine kirjutai. Hän kirjuti armastuz- da [[moraline roman|moraližed romanoid]].
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Suren Britanijan kirjutajad]]
