*Empty MediaWiki Message*

--- a/Puškin_Aleksandr.mw
+++ b/Puškin_Aleksandr.mw
@@ -4,6 +4,7 @@
 
 {{stub}}
 
-[[Kategorii:Kirjutajad|P]]
-[[Kategorii:Runokirjutajad|P]]
-[[Kategorii:Dramaturgad|P]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
+[[Kategorii:Runokirjutajad]]
+[[Kategorii:Dramaturgad]]
