--- a/Petuhov_Anatolii.mw
+++ b/Petuhov_Anatolii.mw
@@ -1,6 +1,7 @@
 '''Anatolii Vasil'jevič Petuhov''' om [[Vepsläižed|vepsän]] kurjutai, kudamb kirjutab [[vepsän kel'|vepsän kelel]] da [[venäkel'|venäkelel]].
 
 {{stub}}
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
 [[Kategorii:Vepsläižed]]
 [[Kategorii:Vepsän kirjutajad]]
