*Empty MediaWiki Message*

--- a/Poskröbiševa_Galina.mw
+++ b/Poskröbiševa_Galina.mw
@@ -3,4 +3,5 @@
 
 [[Kategorii:Dietologad]]
 [[Kategorii:TV-vedajad]]
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
