*Empty MediaWiki Message*

--- a/Pul'kin_Vasilii.mw
+++ b/Pul'kin_Vasilii.mw
@@ -2,6 +2,7 @@
 {{stub}}
 
 [[Kategorii:Vepsläižed]]
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
 [[Kategorii:Vepsän kirjutajad]]
 [[Kategorii:Dramaturgad]]
