--- a/Remark_Erih_Marija.mw
+++ b/Remark_Erih_Marija.mw
@@ -35,4 +35,5 @@
 * [http://remarque.chkebelski.de/ Toine sait Remarkan polhe]
 * [http://lib.ru/INPROZ/REMARK/ Remarkan romanad elektronižes kirjamištos]
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Saksanman kirjutajad]]
