--- a/Servantes_Migel'_de.mw
+++ b/Servantes_Migel'_de.mw
@@ -4,6 +4,6 @@
 
 Ezmäi kaiked tetas hänen suren romanan "[[Vällišpä idal'go Don Kihot Lamančaspäi]]", kudamb om genijan säduz. Päiči neciš romanas, Servantes om kirjutanu novellid, runoid da pjesid. Hänen toižen romanan nimi om "[[Persiles da Sihismunda]]" (se pässtihe avtoran surman jäl'ghe jo).
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Ispanijan kirjutajad]]
 [[Kategorii:Runokirjutajad]]
-[[Kategorii:Literatur]]
