*Empty MediaWiki Message*

--- a/Smoll_Bertris.mw
+++ b/Smoll_Bertris.mw
@@ -1,5 +1,6 @@
 [[Fail:RT Convention Mr. Romance Competition.jpg|thumb|right|250px|Bertris Smoll]]
-'''Bertris Smoll''' ([[anglijan kel'|angl.]]: ''Bertrice Small''; sünd. [[9. tal'vku]] [[1937]], [[N'ju Jork]], [[AÜV]]) om tetab amerikalaine kirjutai. Hän kirjutab [[armastuzroman|armastuz-]] da [[erotine roman|erotižed]] romanad.
+'''Bertris Smoll''' ([[anglijan kel'|angl.]]: ''Bertrice Small''; sünd. [[9. tal'vku]] [[1937]], [[N'ju Jork]], [[AÜV]]) om tetab amerikalaine kirjutai. Hän kirjutab [[armastuzroman|armastuz-]] da [[erotine roman|erotižed]] romanoid.
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:AÜV:oiden kirjutajad]]
