*Empty MediaWiki Message*

--- a/Sologub_Födor.mw
+++ b/Sologub_Födor.mw
@@ -4,5 +4,6 @@
 {{stub}}
 
 [[Kategorii:Runokirjutajad]]
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
 [[Kategorii:Dramaturgad]]
