*Empty MediaWiki Message*

--- a/Sologub_Födor.mw
+++ b/Sologub_Födor.mw
@@ -1,5 +1,5 @@
 [[Fail:Feodor Sologub.jpg|right|thumb|225px|Födor Sologub]]
-'''Födor Sologub''' (todesine nimi — '''Födor Kuz'mič Teternikov'''; [[Venäkel'|ven]] ''Фёдор Сологуб''; [[1. keväz'ku]] [[1863]], [[Piter]] — [[5. tal'v'ku]] [[1927]], [[Leningrad]]) oli [[Venäma|venälaine]] runokirjutai, kirjutai, dramaturg da publicist.
+'''Födor Sologub''' (todesine nimi — '''Födor Kuz'mič Teternikov'''; [[Venäkel'|ven]] ''Фёдор Кузьмич Сологуб''; [[1. keväz'ku]] [[1863]], [[Piter]] — [[5. tal'v'ku]] [[1927]], [[Leningrad]]) oli [[Venäma|venälaine]] runokirjutai, kirjutai, dramaturg da publicist.
 
 {{stub}}
 
