--- a/Solženicin_Aleksandr.mw
+++ b/Solženicin_Aleksandr.mw
@@ -2,6 +2,7 @@
 '''Aleksandr Isajevič Solženicin''' ([[venäkel'|ven.]]: ''Александр Исаевич Солженицын''; sünd. [[11. tal'vku]] [[1918]], [[Kislovodsk]], [[Venäma]] — kol. [[3. eloku]] [[2008]], [[Moskv]]) oli venälaine kirjutai. [[Dissident]] da [[antikommunizm|antikommunist]].
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
 [[Kategorii:Dissidentad]]
 [[Kategorii:Antikommunistad]]
