--- a/Stal'fel't_Pernilla.mw
+++ b/Stal'fel't_Pernilla.mw
@@ -1,5 +1,6 @@
-'''Karin Pernilla Margareta Stal'fel't''' ([[ročin kel'|roč.]]: ''Karin Pernilla Margareta Stalfelt''; sünd. [[1962]]) om [[Ročinma|ročine]] pirdai, kirjutai da opendai [[Stokgol'm]]an [[Moderna Museet]]:as. [[Astridan Lingrenan premii|Astridan Lingrenan premijan]] laureat (2004).
+'''Karin Pernilla Margareta Stal'fel't''' ([[ročin kel'|roč.]]: ''Karin Pernilla Margareta Stalfelt''; sünd. [[1962]]) om [[Ročinma|ročilaine]] pirdai, kirjutai da opendai [[Stokhol'm]]an [[Moderna Museet]]:as. [[Astridan Lingrenan premii|Astridan Lingrenan premijan]] laureat (2004).
 {{stub}}
 
 [[Kategorii:Pirdajad]]
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Ročinman kirjutajad]]
