*Empty MediaWiki Message*

--- a/Zoščenko_Mihail.mw
+++ b/Zoščenko_Mihail.mw
@@ -7,4 +7,5 @@
 * [http://lib.ru/RUSSLIT/ZOSHENKO/ Zoščenkon sanutesed online bibliotekas]
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
