--- a/Čehov_Anton.mw
+++ b/Čehov_Anton.mw
@@ -4,5 +4,6 @@
 
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
 [[Kategorii:Dramaturgad]]
