--- a/Štil'mark_Robert.mw
+++ b/Štil'mark_Robert.mw
@@ -3,5 +3,6 @@
 Kaikiš tetabamb kirj om «[[Jälgestai Kal'kuttaspäi]]», kudamb om kirjutud [[1958]]-žes vodes.
 {{stub}}
 
-[[Kategorii:Kirjutajad]]
+[[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Venäman kirjutajad]]
 [[Kategorii:Lehtezmehed]]
